--- a/disclaimer2.html
+++ b/disclaimer2.html
@@ -23,7 +23,7 @@
 
 <p>Es werden auch darüberhinaus keine persönlichen oder personenbezogenen Daten vom Besucherzähler erhoben. Eine Nachverfolgung oder Zuordnung der Zugriffe ist zu keiner Zeit möglich. <a href="https://youtu.be/dQw4w9WgXcQ?si=ZTWUsZ9WHDLwtgoi">Klick mich!</a></p>
 
-<a href="home.html" class="link-button">Zurück zur Startseite</a>
+<a href="index.html" class="link-button">Zurück zur Startseite</a>
 
 
 <style>
