--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
 <p> </p>
 <p> </p>
 
-<a href="wrong.html" class="link-button">Hier registrieren!</a>
+<a href="registrate.html" class="link-button">Konto eröffnen</a>
 
 <p> </p>
 <p> </p>
@@ -85,7 +85,7 @@
 </style>
 
 <p> </p>
-<a href="https://youtu.be/dQw4w9WgXcQ?si=ZTWUsZ9WHDLwtgoi">Version 1.6</a>
+<a href="https://youtu.be/dQw4w9WgXcQ?si=ZTWUsZ9WHDLwtgoi">Version 1.8</a>
 <a href="https://youtu.be/dQw4w9WgXcQ?si=ZTWUsZ9WHDLwtgoi">vom 21.05.2024</a>
 </body>
 </html>
