--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         }
     }
 </script>
-
-
+<a href="newuser.html" class="button">Zugang anfragen</a>
+<p> </p>
+<a href="disclaimer2.html" class="link-button">DISCLAIMER</a>
+<p> </p>
 <a href="tictactoe.html" class="link-button">Tic-Tac-Toe-Spielen</a>
 
 <style>
@@ -74,7 +76,7 @@
   </style>
 
   <p>       </p>
-<a href="https://youtu.be/dQw4w9WgXcQ?si=ZTWUsZ9WHDLwtgoi">Version 1.6</a>
+<a href="https://youtu.be/dQw4w9WgXcQ?si=ZTWUsZ9WHDLwtgoi">Version 1.8</a>
 <a href="https://youtu.be/dQw4w9WgXcQ?si=ZTWUsZ9WHDLwtgoi">vom 21.05.2024</a>
 </body>
 </html>
