--- a/tictactoe.html
+++ b/tictactoe.html
@@ -21,3 +21,23 @@
 </div>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="tictactoe.js"></script>
+<a href="index.html" class="link-button">Zurück zur Startseite</a>
+
+
+<style>
+  .link-button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 5px;
+    background-color: #ff0000;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+  }
+
+  .link-button:hover {
+    background-color: #ad0000;
+  }
+</style>
